fixes spacing for product title on home featured products

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -219,11 +219,11 @@ a {
 		position: absolute;
 		bottom: 0; left: 0;
 		margin: 0;
-		padding: 0 em(6px, $fsz);
+		padding: em(4px, $fsz) em(6px, $fsz);
 		background-color: $bg;
-		border: 4px solid $bg;
+		border: em(4px, $fsz) solid $bg;
 		
-		line-height: em(24px, $fsz);
+		line-height: em(18px, $fsz);
 		color: $color;
 	}
 }
